separating workflow folder

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,6 @@
 
 
-name: Workflow Application
+name: Lint Application
 
 on:
   push: 
@@ -10,33 +10,15 @@ on:
 
 jobs:
 
-  build:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Setup python 3.12.7
-      uses: actions/setup-python@v5
-      with: 
-        python-version: '3.12.7'
-
-    - name: Install poetry
-      uses: snok/install-poetry@v1
-      with:
-        virtualenvs-in-project: true
-
-    - name: Load cache venv
-      uses: actions/cache@v4
-      id: cached-poetry-dependencies
-      with: 
-        path: .venv
-        key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
-
-
-    - name: Install dependencies with poetry
-      run: poetry run make install
+    - name: Build Application
+      uses: ./.github/build-application
 
     - name: Lint using flake8
       run: poetry run make check
