--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Build Application
-      uses: ./.github/build-application
+      run: ./.github/actions/build-application
 
     - name: Lint using flake8
       run: poetry run make check
